# smart-home

./: CMakeLists.txt  README.md
config/: config.json
include/app/: Application.h
include/communication/: CommunicationFactory.h  HttpClient.h  IProtocol.h  MqttClient.h  ProtocolAdapter.h
include/communication/interfaces/: CommunicationTypes.h  IProtocol.h
include/core/: ConfigManager.h  EventBus.h  Logger.h
include/core/types/: EventTypes.h
include/devices/: DeviceCommand.h  DeviceController.h  DeviceState.h
include/devices/interfaces/: DeviceTypes.h  ICommand.h  IDeviceState.h
include/pipeline/: BaseDataHandler.h  DataFilter.h  DataPipeline.h  DataTransformer.h  DataValidator.h  IDataHandler.h
include/pipeline/interfaces/: IDataHandler.h
include/sensors/: BaseSensor.h  HumiditySensor.h  ISensor.h  MotionSensor.h  SensorFactory.h  TemperatureSensor.h
include/sensors/interfaces/: ISensor.h  SensorReading.h  SensorTypes.h
include/services/: AutomationService.h  CommunicationService.h  SensorService.h
src/: main.cpp
src/app/: Application.cpp
src/communication/: CommunicationFactory.cpp  HttpClient.cpp  MqttClient.cpp  ProtocolAdapter.cpp
src/core/: ConfigManager.cpp  EventBus.cpp  Logger.cpp
src/devices/: DeviceCommand.cpp  DeviceController.cpp  DeviceState.cpp
src/pipeline/: DataFilter.cpp  DataPipeline.cpp  DataTransformer.cpp  DataValidator.cpp
src/sensors/: BaseSensor.cpp  HumiditySensor.cpp  MotionSensor.cpp  SensorFactory.cpp  TemperatureSensor.cpp
src/services/: AutomationService.cpp  CommunicationService.cpp  SensorService.cpp
